working on getting the probe screen up and running

--- a/mwcnc.ini
+++ b/mwcnc.ini
@@ -30,8 +30,15 @@ MIN_ANGULAR_VELOCITY = 1.666667
 EDITOR = gedit
 GEOMETRY = xyz
 CYCLE_TIME = 100
+#deprecated - only used by the QtVCP-based user interfaces
+DEFAULT_SPINDLE_0_SPEED = 100
+MIN_SPINDLE_0_SPEED = 1000
+MAX_SPINDLE_0_SPEED = 24000
+MAX_SPINDLE_0_OVERRIDE = 1.500000
+MIN_SPINDLE_0_OVERRIDE = 0.500000
+
 EMBED_TAB_NAME=Probe Screen
-EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -x {XID} -u python/probe_screen.py -H probe_icons/probe_screen.hal probe_icons/probe_screen.glade
+#EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -x {XID} -u python/probe_screen.py -H probe_icons/probe_screen.hal probe_icons/probe_screen.glade
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -218,7 +225,7 @@ HOME_SEQUENCE =  0
 #******************************************
 [PYTHON]
 PATH_PREPEND = ./python
-TOPLEVEL = python/toplevel.py
+#TOPLEVEL = python/toplevel.py
 
 [SPINDLE_0]
 P = 0.0
@@ -255,3 +262,6 @@ X = 10
 Y = 10
 Z = 60
 
+[PYTHON]
+PATH_PREPEND = ./python
+TOPLEVEL = python/toplevel.py
