change G-Code startup settings

--- a/mwcnc.ini
+++ b/mwcnc.ini
@@ -53,7 +53,7 @@ CYCLE_TIME = 0.010
 
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
-#RS274NGC_STARTUP_CODE = G21 G40 G90 G94 G97 G64 P0.025
+RS274NGC_STARTUP_CODE = G21 G40 G90 G94 G97 G64 P0.025
 #SUBROUTINE_PATH = macros
 # all is now done using same file as ON_ABORT_COMMAND
 # we need to edit the file o<backup_status_restore> for set the correct units-per-mm G20/G21
@@ -68,7 +68,7 @@ HAL_PIN_VARS = 1
 RETAIN_G43 = 0
 
 # this is important with remap - read nc_subroutines/reset_state.ngc
-ON_ABORT_COMMAND=o<backup_status_restore> call
+#ON_ABORT_COMMAND=o<backup_status_restore> call
 
 #REMAP=M6   modalgroup=6  ngc=psng_manual_change
 # Custom Mcode in remap folder M110 to M112 for clear axis popup M160 to M163 for manage 3D-PROBE/TOOL-SETTER input
