added some cool stuff

--- a/mwcnc.ini
+++ b/mwcnc.ini
@@ -38,6 +38,7 @@ MAX_SPINDLE_0_OVERRIDE = 1.500000
 MIN_SPINDLE_0_OVERRIDE = 0.500000
 EMBED_TAB_NAME=PSNG
 EMBED_TAB_COMMAND=gladevcp -c probe -x {XID} -u nc_subroutines/psng/python -H nc_subroutines/psng/psng.hal nc_subroutines/psng/psng_mod.glade
+PYVCP = screens/z_touch.xml
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -59,13 +60,14 @@ RS274NGC_STARTUP_CODE = G21 G40 G90 G94 G97 G64 P0.025
 # we need to edit the file o<backup_status_restore> for set the correct units-per-mm G20/G21
 RS274NGC_STARTUP_CODE = o<backup_status_restore> call [123]
 
-SUBROUTINE_PATH = ./nc_subroutines:./nc_subroutines/psng/macros
+SUBROUTINE_PATH = ./nc_subroutines:./nc_subroutines/psng/macros:macros
 USER_M_PATH = ./nc_subroutines/remap
 
 #New format for feature :
 INI_VARS = 1
 HAL_PIN_VARS = 1
 RETAIN_G43 = 0
+REMAP=M6  modalgroup=6 ngc=messen
 
 # this is important with remap - read nc_subroutines/reset_state.ngc
 #ON_ABORT_COMMAND=o<backup_status_restore> call
@@ -96,7 +98,6 @@ POSTGUI_HALFILE = post-gui-dynamicZ.hal
 
 [HALUI]
 MDI_COMMAND = O <z_touch> CALL
-MDI_COMMAND = 69 <z_touch> CALL
 
 [KINS]
 JOINTS = 3
@@ -202,9 +203,9 @@ STEPLEN    = 500
 STEPSPACE  = 500
 STEP_SCALE = -3200.0
 HOME_OFFSET = 1330.000000
-HOME_SEARCH_VEL = 80.000000
+HOME_SEARCH_VEL = 100.000000
 HOME_LATCH_VEL = -1
-HOME_FINAL_VEL = 80.000000
+HOME_FINAL_VEL = 120.000000
 HOME_USE_INDEX = NO
 HOME_SEQUENCE =  1
 #******************************************
