fix tool length offset script

--- a/mwcnc.ini
+++ b/mwcnc.ini
@@ -54,11 +54,11 @@ CYCLE_TIME = 0.010
 
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
-RS274NGC_STARTUP_CODE = G21 G40 G90 G94 G97 G64 P0.025
+RS274NGC_STARTUP_CODE = G21 G40 G90 G94 G97 G64 P0.025 G92.1 G54
 #SUBROUTINE_PATH = macros
 # all is now done using same file as ON_ABORT_COMMAND
 # we need to edit the file o<backup_status_restore> for set the correct units-per-mm G20/G21
-RS274NGC_STARTUP_CODE = o<backup_status_restore> call [123]
+#RS274NGC_STARTUP_CODE = o<backup_status_restore> call [123]
 
 SUBROUTINE_PATH = ./nc_subroutines:./nc_subroutines/psng/macros:macros
 USER_M_PATH = ./nc_subroutines/remap
@@ -215,7 +215,7 @@ HOME_SEQUENCE =  1
 MAX_VELOCITY = 100
 MAX_ACCELERATION = 1000.0
 MIN_LIMIT = -220.0
-MAX_LIMIT = 0.01
+MAX_LIMIT = 1
 
 [JOINT_2]
 TYPE = LINEAR
@@ -244,7 +244,7 @@ STEPLEN    = 800
 STEPSPACE  = 800
 STEP_SCALE = 2000.0
 MIN_LIMIT = -220.0
-MAX_LIMIT = 0.01
+MAX_LIMIT = 1
 HOME_OFFSET = 10.0
 HOME_SEARCH_VEL = 25.000000
 HOME_LATCH_VEL = -1
