--- a/mwcnc.ini
+++ b/mwcnc.ini
@@ -22,7 +22,7 @@ PROGRAM_PREFIX = /home/cnc/linuxcnc/nc_files
 INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
 POSITION_FEEDBACK = ACTUAL
 DEFAULT_LINEAR_VELOCITY = 33.333333
-MAX_LINEAR_VELOCITY = 166.666667
+MAX_LINEAR_VELOCITY = 350
 MIN_LINEAR_VELOCITY = 0.166667
 DEFAULT_ANGULAR_VELOCITY = 12.000000
 MAX_ANGULAR_VELOCITY = 180.000000
@@ -68,6 +68,7 @@ INI_VARS = 1
 HAL_PIN_VARS = 1
 RETAIN_G43 = 0
 REMAP=M6  modalgroup=6 ngc=messen
+#REMAP=M6   modalgroup=6  ngc=psng_manual_change
 
 # this is important with remap - read nc_subroutines/reset_state.ngc
 #ON_ABORT_COMMAND=o<backup_status_restore> call
@@ -94,7 +95,7 @@ POSTGUI_HALFILE = custom_postgui.hal
 SHUTDOWN = shutdown.hal
 TWOPASS=ON
 #POSTGUI_HALFILE = post-gui-comon.hal
-POSTGUI_HALFILE = post-gui-dynamicZ.hal
+#POSTGUI_HALFILE = post-gui-dynamicZ.hal
 
 [HALUI]
 MDI_COMMAND = O <z_touch> CALL
@@ -171,7 +172,7 @@ HOME_SEQUENCE = 1
 
 #******************************************
 [AXIS_Y]
-MAX_VELOCITY = 166.6666
+MAX_VELOCITY = 350
 MAX_ACCELERATION = 850.0
 MIN_LIMIT = -0.0
 MAX_LIMIT = 1465.0
@@ -181,7 +182,7 @@ TYPE = LINEAR
 HOME = 0.0
 FERROR = 10.0
 MIN_FERROR = 1.0
-MAX_VELOCITY = 166.6666
+MAX_VELOCITY = 350
 MAX_ACCELERATION = 850.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
